--- a/tree-app/src/app/app.component.html
+++ b/tree-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h2>Hello World</h2>
+<h2>Hello World!</h2>
 
 <button (click)="expandAll()">Expand</button>
 <button (click)="collapseAll()">Collapse</button>
