--- a/tree-app/src/app/app.component.html
+++ b/tree-app/src/app/app.component.html
@@ -2,6 +2,7 @@
 
 <button (click)="expandAll()">Expand</button>
 <button (click)="collapseAll()">Collapse</button>
+<button (click)="sayHello()">Hello!</button>
 
 <br>
 
