--- a/tree-app/src/app/components/tree-node/tree-node.component.scss
+++ b/tree-app/src/app/components/tree-node/tree-node.component.scss
@@ -14,6 +14,7 @@ li {
             position: relative;
             border: 1px solid #777;
             background-color: white;
+            padding: 0;
 
             &.hidden {
                 visibility: hidden;
@@ -47,6 +48,7 @@ li {
 
             span {
                 margin-left: 8px;
+                cursor: pointer;
             }
         }
 
