--- a/tree-app/src/styles.scss
+++ b/tree-app/src/styles.scss
@@ -3,3 +3,56 @@ html {
     color: #333;
     font-size: 14px;
 }
+
+button {
+    display: inline-block;
+    cursor: pointer;
+    padding: 5px 16px;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 20px;
+    vertical-align: middle;
+    border: 1px solid;
+    border-radius: 3px;
+    color: #24292e;
+    background-color: #fafbfc;
+    border-color: #1b1f2326;
+}
+
+dialog {
+    &::backdrop {
+        background: #33333355;
+    }
+
+    padding: 0;
+    border: 0;
+    box-shadow: 0 0 10px 0 rgba(28, 54, 84, 0.3);
+    width: 450px;
+    border-radius: 3px;
+
+    >header {
+        padding: 20px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        font-weight: bold;
+        font-size: large;
+    }
+
+    >div {
+        padding: 20px;
+    }
+
+    >footer {
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: flex-start;
+        padding: 20px;
+
+        >* {
+            &:not(:last-child) {
+                margin-left: 15px;
+            }
+        }
+    }
+}
