Play with observable

--- a/tree-app/src/app/components/tree/tree.component.html
+++ b/tree-app/src/app/components/tree/tree.component.html
@@ -1,3 +1,3 @@
 <ul>
-    <tree-node *ngFor="let n of nodes" [node]="n"></tree-node>
+  <tree-node *ngFor="let treeNode of tree" [node]="treeNode"></tree-node>
 </ul>
